# OpenGL_Project

./: .gitignore  CEStudents.cpp  CMakeLists.txt  CMakePresets.json  README.md  bounceball.cpp  command.txt  compile_naturalphenomena.bat  compile_scene3D.bat  create_structure.bat  game2D.cpp  main.cpp  manual_compile_commands.txt  naturalphenomena.cpp  run_CEStudents.bat  run_naturalphenomena.bat  scene3D.cpp  setup_fonts.bat
.github/workflows/: build.yml
include/: shader.h
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: glad.c  shader.cpp
